<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/action_refresh"
        android:orderInCategory="1"
        android:title="@string/action_refresh"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/action_share_thoughts"
        android:orderInCategory="2"
        android:title="@string/action_share_thoughts"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_map"
        android:orderInCategory="3"
        android:title="@string/action_map"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_settings"
        android:orderInCategory="100"
        android:title="@string/action_settings"
        app:showAsAction="never" />
</menu>
